kubernetes/cluster/privacy/invidious/invidious.yaml
# Service: Invidious
# Ingress: yt.brhd.io
# Label: app.kubernetes.io/name: invidious
---
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: privacy
  labels:
    app.kubernetes.io/name: invidious
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: invidious
    - protocol: TCP
      port: 8282
      targetPort: 8282
      name: companion
  selector:
    app.kubernetes.io/name: invidious
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: privacy
  labels:
    app.kubernetes.io/name: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: invidious
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: privacy
      labels:
        app.kubernetes.io/name: invidious
    spec:
      restartPolicy: Always
      containers:
        - name: invidious
          image: quay.io/invidious/invidious:2.20260804.1
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 500Mi
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 30
          #   periodSeconds: 120
        - name: companion
          image: quay.io/invidious/invidious-companion:latest
          ports:
            - containerPort: 8282
          volumeMounts:
            - name: invidious-companion-cache
              mountPath: /var/tmp/youtubei.js
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      volumes:
        - name: invidious-companion-cache
          emptyDir: {}
