kubernetes/cluster/privacy/invidious/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  namespace: privacy
  labels:
    app.kubernetes.io/name: invidious
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: yt.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keda-http-interceptor
                port:
                  number: 8080
          - pathType: Prefix
            path: /companion
            backend:
              service:
                name: invidious
                port:
                  number: 8282
  tls:
    - hosts:
        - yt.brhd.io
